Added custom styling for material ui components. Now using material-table for asset/liability management. Records can now be added and deleted. Records are now refetched after creating/deleting a record. This could be more efficient, but it was the simplest solution

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  width: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 15vh;
@@ -11,4 +15,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.mainContent {
+  width: 75%;
+  /* display: flex;
+  align-content: center;
+  align-items: center; */
 }
