Main content section is now centered again

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,8 @@ body {
 
 .mainContent {
   width: 75%;
+  min-width: 375px;
+  margin: auto;
   /* display: flex;
   align-content: center;
   align-items: center; */
